fix(ActionBar): fix text wrapping

--- a/packages/commerce/src/action-bar/action-bar.scss
+++ b/packages/commerce/src/action-bar/action-bar.scss
@@ -7,4 +7,5 @@
   width: 100%;
   height: $action-bar-height;
   background: $action-bar-background;
+  white-space: nowrap;
 }
